# assistant

./: .eslintrc.js  .gitignore  .prettierignore  2.py  README.md  chat_test.py  image.py  info.json  intents.json  mak.py  package-lock.json  package.json  prod.py  pyproject.toml  requirements.txt  setup.py  test.js  test.py  test.txt  test_2.py  tsconfig.json  vad.py
data/plugins/spotify-plugin/: auth.json
experiments/: image.py  test.js  wav.py
old/neural/: __init__.py  engines.py  model.py
py/: bridge.py  intents.py  soc.py  test copy.py  test.py  tts.py
py/neural/: engines.py  train.py
python/: NER.py  bridge.py  chat.py  chat_old.py  debug.json  debug.py  diffusion.py  empty.py  image_generator.py  intents.py  merging.py  stt copy.py  stt.py  tts.py
python/neural/: datasets.py  engines.py  model.py  train.py  utils.py
scripts/: copy-plugin-assets.js  create-plugin.js  resolve-ts-paths.js
src/: config.json  console.ts  index.ts  resolver.ts
src/core/: api.ts  assistant.ts  base.ts  bus.ts  chat.ts  classifiers.ts  conversion.ts  notify.ts  paths.ts  singletons.ts  subprocess.ts  thread.ts  types.ts  utils.ts
src/old/: events.ts  leveling.ts  music.ts
src/old/music/: index.ts
src/old/music/commands/: loop.ts  now.ts  pause.ts  play.ts  (+6 more)
src/old/twitch/: index.ts
src/plugins/base/: index.ts
src/plugins/desktop/: index copy.html  index.ts
src/plugins/discord/: conversation.ts  index.ts  types.ts  utils.ts  ws.ts
src/plugins/govee/: index.ts  types.ts
src/plugins/spotify/: index.ts  types.ts
src/plugins/telegram/: index.ts  types.ts
(+8 files in other folders)
